e2e/missing-cluster/envoy.yaml
---
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            use_remote_address: true
            xff_num_trusted_hops: 1
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: upstream
            http_filters:
              - name: envoy.filters.http.wasm
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    name: kuadrant_wasm
                    root_id: kuadrant_wasm
                    vm_config:
                      vm_id: vm.sentinel.kuadrant_wasm
                      runtime: envoy.wasm.runtime.v8
                      code:
                        local:
                          filename: /opt/kuadrant/wasm/wasm_shim.wasm
                      allow_precompiled: true
                    configuration:
                      "@type": "type.googleapis.com/google.protobuf.StringValue"
                      value: >
                        {
                          "services": {
                            "limitador": {
                              "type": "ratelimit",
                              "endpoint": "limitador",
                              "failureMode": "deny"
                            },
                            "mistyped-service": {
                              "type": "ratelimit",
                              "endpoint": "mistyped-service",
                              "failureMode": "deny"
                            }
                          },
                          "actionSets": [
                            {
                              "name": "envoy-cluster-not-found-actionset",
                              "routeRuleConditions": {
                                "hostnames": [
                                  "*.example.com"
                                ]
                              },
                              "actions": [
                                {
                                  "service": "mistyped-service",
                                  "scope": "a",
                                  "data": [
                                    {
                                      "expression": {
                                        "key": "limit_to_be_activated",
                                        "value": "1"
                                      }
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: upstream
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: upstream
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: upstream
                  port_value: 3000
    - name: limitador
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: limitador
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: limitador
                  port_value: 8081
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
